...
    
    var body: some Scene {
        WindowGroup {
            TabView {
                TodayView(viewModel: container.makeTodayViewModel())
                    .tabItem {
                        Label("Hoy", systemImage: "sun.max.fill")
                    }
                
                HabitListView(viewModel: container.makeHabitListViewModel())
                    .tabItem {
                        Label("Todos", systemImage: "list.bullet")
                    }
...
