...
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button(action: {
                        isShowingAddView = true
                    }) {
                        Image(systemName: "plus")
                    }
                    .accessibilityIdentifier("add_habit_button")
                }
            }
            .sheet(isPresented: $isShowingAddView) {
                if let dependencyContainer {
                    AddEditHabitView(
                        viewModel: dependencyContainer.makeAddEditHabitViewModel(),
...
